# advanced

Ferramentaria/app/: __init__.py  auth.py  config.py  models.py  routes.py  utils.py
LIB/pysql_lite/: .gitattributes  .gitignore  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  DEVELOPMENT.md  FINAL_SUMMARY.md  GETTING_STARTED.md  INDEX.md  MANIFEST.in  PERFORMANCE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  ROADMAP.md  STATUS.md  SUMMARY.md  TROUBLESHOOTING.md  __init__.py  database.py  pyproject.toml  setup.py
LIB/pysql_lite/.github/workflows/: tests.yml
LIB/pysql_lite/docs/: DEFINING_MODELS.md  FAQ.md  QUERYSET_GUIDE.md  README.md
LIB/pysql_lite/examples/: README.md  __init__.py  advanced_example.py  blog_example.py  simple_example.py
LIB/pysql_lite/tests/: README.md  __init__.py  test_database.py
Rick and Morty/: app.py  config.py  requirements.txt
Rick and Morty/app/: __init__.py  routes.py  services.py
Rick and Morty/template/: base.html  characters.html  episodes.html  index.html  login.html  quiz.html
Rick and Morty/tests/: test_basic.py  test_routes.py
dynamic-pricing-engine/: .env.example  .gitignore  COMPLETION_SUMMARY.txt  DEVELOPMENT.md  Dockerfile.audit_api  Dockerfile.audit_service  Dockerfile.pricing_api  Dockerfile.rules_engine  Dockerfile.scraper  DynamicPricingEngine.postman_collection.json  EXECUTIVE_SUMMARY.md  PROJECT_MANIFEST.md  QUICK_START.md  README.md  docker-compose.yml  requirements.txt
dynamic-pricing-engine/config/: settings.py
(+24 files in other folders)
